[package]
name = "genawaiter-try-stream"
version = "0.0.0"
edition = "2024"
publish = true
repository = "https://github.com/parrrate/genawaiter-try-stream"
authors = ["Alisa Feistel <alisafeistel@gmail.com>"]
license = "MIT OR Apache-2.0"
rust-version = "1.90"
exclude = ["/.github", "/.gitignore", "CHANGELOG.md"]

[dependencies]
futures-core = { version = "0.3.31", default-features = false }
genawaiter = { version = "0.99.1", features = ["futures03"] }
